Added static methods exp and log to Complex class

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "@typescript-eslint",
     "jest"
   ],
+  "root": true,
   "rules": {
     "@typescript-eslint/consistent-type-definitions": [
       "error",
