--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clean:docs": "rimraf docs/**/*.md",
     "clean": "concurrently 'npm:clean:*'",
     "lint": "eslint . --ext .js,.ts",
-    "test": "jest --coverage",
+    "test": "jest",
     "build": "rollup --config --environment NODE_ENV:production",
     "rebuild": "npm run clean:build && npm run build",
     "docs": "npm run clean:docs && typedoc src/complex.ts",
@@ -30,12 +30,12 @@
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@types/jest": "^26.0.8",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
     "@wessberg/rollup-plugin-ts": "^1.3.5",
     "babel-jest": "^26.5.2",
     "concurrently": "^5.2.0",
-    "eslint": "^7.10.0",
+    "eslint": "^7.15.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.0",
