Added trigonometric functions

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,11 @@
       "error",
       "interface"
     ],
+    "@typescript-eslint/func-call-spacing": "error",
+    "@typescript-eslint/indent": [
+      "error",
+      2
+    ],
     "@typescript-eslint/lines-between-class-members": "error",
     "@typescript-eslint/member-delimiter-style": "error",
     "@typescript-eslint/no-dupe-class-members": "error",
@@ -39,6 +44,7 @@
         "asyncArrow": "always"
       }
     ],
+    "func-call-spacing": "off",
     "function-paren-newline": [
       "error",
       "consistent"
@@ -59,6 +65,7 @@
         ]
       }
     ],
+    "indent": "off",
     "lines-between-class-members": "off",
     "no-bitwise": "off",
     "no-dupe-class-members": "off",
@@ -76,6 +83,7 @@
     ],
     "no-redeclare": "off",
     "no-shadow": "off",
+    "no-spaced-func": "off",
     "no-underscore-dangle": [
       "error",
       {
