--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,9 @@ jobs:
       - name: Install and Test
         run: |
           npm ci
-          npm run rebuild
+          npm run clean
+          npm run lint
           npm test -- --ci
+          npm run build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
