--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "clean:docs": "rimraf docs/**/*.md",
     "clean": "concurrently 'npm:clean:*'",
     "lint": "eslint . --ext .js,.ts",
-    "test": "jest",
+    "test": "jest --coverage",
     "build": "rollup --config --environment NODE_ENV:production",
     "rebuild": "npm run clean:build && npm run build",
-    "docs": "npm run clean:docs && typedoc src/docs.ts",
+    "docs": "typedoc src/complex.ts",
     "watch:test": "npm test -- --watch",
     "watch:build": "npm run build -- --environment NODE_ENV:development --watch",
+    "watch:docs": "npm run docs -- --watch",
     "watch": "concurrently 'npm:watch:*'",
-    "prepublishOnly": "npm run clean && npm run lint && npm test -- --ci && npm run build && npm run docs"
+    "prepublishOnly": "npm run clean && npm run lint && npm test && npm run build && npm run docs"
   },
   "author": "Patrick Roberts",
   "license": "MIT",
@@ -32,7 +33,7 @@
     "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
-    "@wessberg/rollup-plugin-ts": "^1.3.8",
+    "@wessberg/rollup-plugin-ts": "^1.3.14",
     "babel-jest": "^26.6.3",
     "concurrently": "^5.2.0",
     "eslint": "^7.18.0",
@@ -46,6 +47,7 @@
     "ts-jest": "^26.4.4",
     "typedoc": "^0.20.16",
     "typedoc-plugin-markdown": "^3.4.0",
+    "typedoc-plugin-rename-defaults": "^0.1.0",
     "typedoc-plugin-sourcefile-url": "^1.0.6",
     "typescript": "^4.1.3"
   },
