--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "jest --coverage",
     "build": "rollup --config --environment NODE_ENV:production",
     "rebuild": "npm run clean:build && npm run build",
-    "docs": "typedoc src/complex.ts",
+    "docs": "typedoc src/index.ts",
     "watch:test": "npm test -- --watch",
     "watch:build": "npm run build -- --environment NODE_ENV:development --watch",
     "watch:docs": "npm run docs -- --watch",
@@ -47,7 +47,6 @@
     "ts-jest": "^26.4.4",
     "typedoc": "^0.20.16",
     "typedoc-plugin-markdown": "^3.4.0",
-    "typedoc-plugin-rename-defaults": "^0.1.0",
     "typedoc-plugin-sourcefile-url": "^1.0.6",
     "typescript": "^4.1.3"
   },
