--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
-    "@wessberg/rollup-plugin-ts": "^1.3.14",
     "babel-jest": "^26.6.3",
     "concurrently": "^5.2.0",
     "eslint": "^7.18.0",
@@ -44,6 +43,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.36.2",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-ts": "^1.4.1",
     "ts-jest": "^26.4.4",
     "typedoc": "^0.20.16",
     "typedoc-plugin-markdown": "^3.4.0",
