--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "types": "dst/esm/complex.d.ts",
   "scripts": {
     "clean:test": "rimraf coverage",
-    "clean:build": "rimraf dst",
+    "clean:build": "rimraf dst src/**/*.js src/**/*.d.ts src/parser/grammar.ts",
     "clean:docs": "rimraf docs/**/*.md",
     "clean": "concurrently 'npm:clean:*'",
     "lint": "eslint . --ext .js,.ts",
     "test": "jest --coverage",
-    "build": "rollup --config --environment NODE_ENV:production",
+    "build:ne": "nearleyc src/parser/grammar.ne -o src/parser/grammar.ts",
+    "build:ts": "rollup --config --environment NODE_ENV:production",
+    "build": "npm run build:ne && npm run build:ts",
     "rebuild": "npm run clean:build && npm run build",
     "docs": "typedoc src/index.ts",
     "watch:test": "npm test -- --watch",
@@ -31,10 +33,11 @@
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@types/jest": "^26.0.20",
+    "@types/nearley": "^2.11.2",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "babel-jest": "^26.6.3",
-    "concurrently": "^5.2.0",
+    "concurrently": "^6.4.0",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -49,6 +52,9 @@
     "typedoc-plugin-markdown": "^3.4.0",
     "typedoc-plugin-sourcefile-url": "^1.0.6",
     "typescript": "^4.1.3"
+  },
+  "peerDependencies": {
+    "nearley": "^2.20.1"
   },
   "browserslist": {
     "development": [
