--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,9 @@ jobs:
         run: |
           npm ci
           npm run clean
+          npm run build:ne
           npm run lint
           npm test -- --ci
-          npm run build
+          npm run build:ts
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
