--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "watch:build": "npm run build -- --environment NODE_ENV:development --watch",
     "watch:docs": "npm run docs -- --watch",
     "watch": "concurrently 'npm:watch:*'",
-    "prepublishOnly": "npm run clean && npm run lint && npm test && npm run build && npm run docs"
+    "prepublishOnly": "npm run clean && npm run build:ne && npm run lint && npm test && npm run build:ts && npm run docs"
   },
   "author": "Patrick Roberts",
   "license": "MIT",
@@ -43,6 +43,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
     "jest": "^26.6.3",
+    "nearley": "^2.20.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.36.2",
     "rollup-plugin-terser": "^7.0.2",
